add redis study and tomcat end